--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="control__btns">
         <button id="jsMode">Fill</button>
         <button id="jsSave">Save</button>
+        <button id="jsClear">clear</button>
     </div>
     <div class="controls_colors" id="jsColors">
         <div class="controls__color" style="background-color: #2c2c2c;"></div>
